--- a/src/styles/scss/layouts/_Footer.scss
+++ b/src/styles/scss/layouts/_Footer.scss
@@ -15,6 +15,7 @@ footer {
         font-weight: 500;
         color: $white;
         margin: 0;
+        text-align: center;
         @media (max-width: 768px) {
             font-size: 20px;
         }
